# tb-rust-checker

./: .gitignore  Cargo.toml  README.md  config.sample.toml
checker_base/: Cargo.toml
checker_base/src/: checksums.rs  error.rs  lib.rs
checker_bot/: Cargo.toml
checker_bot/src/: config.rs  main.rs  storage.rs
checker_bot/src/matrix/: send.rs  sync.rs
checker_bot/src/matrix/sync/: filter.rs  response.rs
checker_cli/: Cargo.toml
checker_cli/src/: main.rs
src/: checksums.rs  config.rs  error.rs  main.rs  matrix.rs  storage.rs
src/matrix/: send.rs  sync.rs
src/matrix/sync/: filter.rs  response.rs
