[package]
name = "checker_base"
version = "1.0.3"
authors = ["Brendan Abolivier"]
description = "Internal logic for checker_bot"
repository = "https://github.com/babolivier/tb-rust-checker"
license = "MPL-2.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
hex = "0.4.3"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
thiserror = "2.0.12"
log = "0.4.27"
url = "2.5.4"
